Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages.

Changelog for smp_utils-0.96 [20110511] [svn:r86]
  - smp_conf_zone_perm_tbl, smp_conf_zone_man_pass
    smp_conf_zone_phy_info, smp_ena_dis_zoning,
    smp_rep_broadcast, smp_rep_phy_event, smp_rep_phy_event_list,
    smp_rep_self_conf_stat, smp_rep_zone_man_pass,
    smp_rep_zone_perm_tbl, smp_zone_activate, smp_zoned_broadcast,
    smp_zone_lock, smp_zone_unlock:
      add these new utilities
  - smp_discover_list: SAS-2 fix, add --adn and --summary
  - smp_rep_exp_route_tbl: SAS-2 fix
  - smp_rep_general: SAS-2 fix, add --zero option
  - smp_discover: add --adn, --summary and --zero options
  - smp_rep_manufacturer, smp_rep_phy_err_log, smp_rep_phy_sata:
    add --zero options
  - smp_conf_general: sync to SAS-2
  - smp_phy_control: sync to SAS-2, SPL
  - smp_phy_test: sync to SAS-2
  - smp_rep_route_info: sync to SAS-2
  - all utilities with '--phy=ID' option: increase max to 254
  - add examples directory
  - remove doc/smp_utils.html , refer readers to web page
  - remove tpl (ai) interface

Changelog for smp_utils-0.95 [20101116] [svn:r47]
  - place link to smp_utils.html examples in man pages
  - alter Makefile for non-root users
  - add spl-r04 discover changes (spl is upper layers of sas-2.1)
  - mpt: cope with mpt2 ioctl that uses a different magic number

Changelog for smp_utils-0.94 [20081229] [svn:r40]
  - smp_discover: sync to sas2r15
  - smp_discover_list: sync to sas2r15
  - smp_rep_general: sync to sas2r15
  - smp_rep_exp_route_tbl: sync to sas2r15
  - smp_lib: sync to sas2r15
  - sgv4: more detail in error messages
  - sgv4: drop scsi.h include, gives problems with lk 2.6.27
  - mpt: allow either /dev/mptctl or /dev/mpt2ctl [10;220-221]
    - warn if target SAS address is 0x00000000 when -v given

Changelog for smp_utils-0.93 [20080106] [svn:r7]
  - sgv4: add new interface