@@ -126,6 +126,9 @@ increase the verbosity of the output. Can be used multiple times
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.SH NOTES
+Once an expander phy has been disabled with \fI\-\-op=dis\fR then it can be
+later re-enabled with a link reset or hard reset (e.g. \fI\-\-op=lr\fR).
 .SH EXAMPLES
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html
 .SH CONFORMING TO
